# minimalist_tower_defense

./: Cargo.toml  README.md
.github/workflows/: ci.yaml  release.yaml
assets/unit/: arrow_tower.unit_data.yaml  bonfire.unit_data.yaml
docs/: 主要流程.md  属性系统.md  敌人.md
docs/common/: 属性系统.md  生产系统.md  进度条.md
docs/level/: 关卡.md  地图.md  巢穴.md
docs/plan/: 计划.md
docs/unit/: 单位.md  箭塔.md  篝火.md
src/: audio.rs  consts.rs  dev_tools.rs  main.rs
src/battle/: bullet.rs  mod.rs
src/bullet/: mod.rs
src/camera/: mod.rs
src/common/: attack_distance.rs  hit_hurt.rs  mod.rs  progress_bar.rs  progress_bar.wgsl  stas.rs  state_chart.rs  sunlight.rs
src/demo/: animation.rs  level.rs  movement.rs  player.rs
src/enemy/: mod.rs
src/level/: mod.rs  unit_data_collection.rs
src/map/: environment.rs  mod.rs
src/map/item_data_factory/: mod.rs
src/map/lair/: mod.rs
src/map/tile/: mod.rs
src/menus/: credits.rs  main.rs  mod.rs  pause.rs  settings.rs
src/navigator/: mod.rs
src/player/: mod.rs
src/product/: mod.rs
src/screens/: gameplay.rs  loading.rs  mod.rs  splash.rs
src/skill/: attribute.rs  mod.rs
src/theme/: interaction.rs  widget.rs
src/unit/: arrow_tower.rs  bonfire.rs  mod.rs
